--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap");
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -18,6 +18,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: "Roboto", sans-serif;
+  height: 100vh;
+  
   background: linear-gradient(
       to bottom,
       transparent,
@@ -26,3 +29,89 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.slider_container {
+  position:relative;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+
+}
+
+.leftSlide {
+  height: 100vh;
+  width: 35%;
+  position:absolute;
+  top:0;
+  left:0;
+  transition: transform .5s ease-in-out;
+}
+.leftSlide > div {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  transition: background-color 100ms linear;
+}
+
+.leftSlide > h2{
+  font-size: 40px;
+  margin-bottom: 10px;
+  margin-top: -30px;
+}
+
+.rightSlide {
+  height: 100%;
+  left:35%;
+  width:65%;
+  position:absolute;
+  top:0;
+  transition: transform .5s ease-in-out;
+}
+
+.rightSlide > div{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+
+}
+
+.action-buttons button{
+position: absolute;
+left: 35%;
+top:50%;
+z-index: 100;
+}
+
+.upButton{
+transform: translateY(-100%);
+
+}
+.downButton{
+  transform: translateX(-100%);
+  
+  }
+
+.action-buttons >button{
+background-color: #fff;
+border: none;
+color: #aaa;
+cursor: pointer;
+font-size: 16px;
+padding: 15px;
+
+}
+
+button:hover{
+  color:#222;
+
+
+}
+
+button:focus{
+  outline: none;
+}
