--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: #000;
+  
   transition: background-color 100ms linear;
 }
 
@@ -77,7 +77,7 @@ body {
   background-position: center;
   height: 100%;
   width: 100%;
-
+  color:#dd7d00;
 }
 
 .action-buttons button{
@@ -114,4 +114,12 @@ button:hover{
 
 button:focus{
   outline: none;
+}
+
+@media only screen and (max-width:500px) {
+  /* For Phone*/
+  .action-buttons >button{
+    font-size: 8px;
+    padding: 8px;
+    }
 }
