--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
-
+/* Left right side Style*/
 .slider_container {
   position:relative;
   overflow: hidden;
@@ -44,6 +44,8 @@ body {
   top:0;
   left:0;
   transition: transform .5s ease-in-out;
+  
+  
 }
 .leftSlide > div {
   height: 100%;
@@ -52,14 +54,17 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+  border-right: 2px solid #7b110b;
   transition: background-color 100ms linear;
+
+  background-image: url(../../public/DSC02298.jpg);
 }
 
 .leftSlide > h2{
   font-size: 40px;
   margin-bottom: 10px;
   margin-top: -30px;
+  opacity: 1;
 }
 
 .rightSlide {
@@ -116,10 +121,137 @@ button:focus{
   outline: none;
 }
 
-@media only screen and (max-width:500px) {
+@media only screen and (max-width:800px) {
   /* For Phone*/
   .action-buttons >button{
-    font-size: 8px;
-    padding: 8px;
+    font-size: 12px;
+    padding: 12px;
     }
+    
+
+}
+@media only screen and (max-width:800px) {
+/* Navbar Style*/
+.container {
+  margin-top: 50px; 
+  Display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.phone {
+  background-color: #36383F;
+  border-radius: 40px;
+  width: 300px;
+  height: 600px;
+  Display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 30px 50px 100px #85888C;
+}
+.content {
+  border: 1px solid #36383F;
+  border-radius: 20px;
+  width: 94%;
+  height: 91%;
+  background-color: #F5F6FA;
+  overflow: hidden;
+}
+nav {
+  background-color: #1E1E23;
+  height: 65px;
+}
+
+
+#menuToggle {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 25px;
+  left: 25px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+}
+
+#menuToggle span
+{
+  display: flex;
+  width: 29px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #ffffff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+  background: #36383F;
+}
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu
+{
+  position: absolute;
+  width: 180px;
+  height: 400px;
+  box-shadow: 0 0 10px #85888C;
+  margin: -50px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background-color: #F5F6FA;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+
+
+#menuToggle input:checked ~ .main-nav
+{
+  transform: none;
+}
+
+nav {
+  background-color: #1E1E23;
+  height: 65px;
+}
 }
